<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity"
    android:background="@drawable/question_activity_background1">

    <TextView
        android:id="@+id/time_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/question_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/time_counter_font"
        android:textSize="30sp"
        android:text="02:30"
        android:textColor="#c17900"
        />
    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_counter"
        app:layout_constraintBottom_toTopOf="@+id/choice_view"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/question_background"
        android:textSize="18sp"
        android:text="1.チューイングガムは紙に（包んで）捨てましょう。"
        android:gravity="center_vertical"
        android:textColor="@color/colorQuestionText"
        android:lineHeight="22sp"/>

    <include
        android:id="@+id/choice_view"
        layout="@layout/choice_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/button_view"
        app:layout_constraintTop_toBottomOf="@+id/question_text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/choice_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">
        <Button
            android:id="@+id/prev_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bunpou_button"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/fty_strategycid"
            android:textColor="@android:color/white"
            android:text="@string/prev_button"/>
        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/prev_button"
            app:layout_constraintEnd_toStartOf="@+id/check_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/goi_button"
            android:fontFamily="@font/fty_strategycid"
            android:textColor="@android:color/white"
            android:text="@string/next_button" />
        <Button
            android:id="@+id/check_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="@id/restart_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/goi_button"
            android:fontFamily="@font/fty_strategycid"
            android:textColor="@android:color/white"
            android:text="@string/check_button"
            android:visibility="gone"/>
        <Button
            android:id="@+id/restart_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/check_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/goi_button"
            android:fontFamily="@font/fty_strategycid"
            android:textColor="@android:color/white"
            android:text="@string/restart_button"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>