<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:background="@drawable/setting_background">

    <TextView
        android:id="@+id/setting_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/fty_strategycid"
        android:textColor="@color/colorQuestionText"
        android:text="Setting"
        android:textSize="26sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="150dp"/>

    <LinearLayout
        android:id="@+id/level_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/setting_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/level"
            android:fontFamily="@font/fty_strategycid"
            android:textSize="18sp"
            android:textColor="@color/colorQuestionText"
            />
        <RadioGroup
            android:id="@+id/radio_group_level"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_n1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button"
                android:text="N1"
                android:textColor="@color/colorQuestionText"
                android:paddingLeft="@dimen/setting_button_padding"
                android:paddingRight="@dimen/setting_button_padding"/>
            <RadioButton
                android:id="@+id/radio_n2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button"
                android:text="N2"
                android:textColor="@color/colorQuestionText"
                android:paddingLeft="@dimen/setting_button_padding"
                android:paddingRight="@dimen/setting_button_padding"/>
            <RadioButton
                android:id="@+id/radio_n3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button"
                android:text="N3"
                android:textColor="@color/colorQuestionText"
                android:paddingLeft="@dimen/setting_button_padding"
                android:paddingRight="@dimen/setting_button_padding"/>
            <RadioButton
                android:id="@+id/radio_n4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button"
                android:text="N4"
                android:textColor="@color/colorQuestionText"
                android:paddingLeft="@dimen/setting_button_padding"
                android:paddingRight="@dimen/setting_button_padding" />
            <RadioButton
                android:id="@+id/radio_n5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button"
                android:text="N5"
                android:textColor="@color/colorQuestionText"
                android:paddingLeft="@dimen/setting_button_padding"
                android:paddingRight="@dimen/setting_button_padding" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/time_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/level_setting_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/exam_time"
            android:fontFamily="@font/fty_strategycid"
            android:textSize="18sp"
            android:textColor="@color/colorQuestionText"
            />
        <EditText
            android:id="@+id/exam_time_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:background="@drawable/setting_input"
            android:textColor="@color/colorQuestionText"
            android:padding="5dp"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/time_unit"
            android:fontFamily="@font/fty_strategycid"
            android:textSize="16sp"
            android:textColor="@color/colorQuestionText"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/time_setting_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="30dp"
        android:weightSum="2">
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/goi_button"
            android:text="@string/save"
            android:fontFamily="@font/fty_strategycid"
            android:layout_weight="1"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bunpou_button"
            android:text="@string/cancel"
            android:fontFamily="@font/fty_strategycid"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>